[tool.poetry]
name = "biocypher-project-planning"
version = "0.3.0"
description = "BioCypher / BioChatter Project Planning from GitHub"
authors = [
    "Sebastian Lobentanzer <sebastian.lobentanzer@gmail.com>",
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.13,>=3.10"
biocypher = "^0.5.43"
requests = "^2.28.2"
tabulate = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
